[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synnax-lab-sdk"
description = "Synnax Lab SDK for downloading training data and uploading predictions"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["synnax"]
dependencies = ["requests", "tqdm", "inflect", "python-dateutil"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["mypy", "black", "types-requests", "types-tqdm", "types-python-dateutil"]
all = ["synnax-lab-sdk[dev]"]

[project.urls]
Homepage = "https://synnax.ai"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.version]
path = "src/synnax_lab_sdk/__about__.py"
